slight changes to row three

--- a/index.html
+++ b/index.html
@@ -17,9 +17,6 @@
     <div class="container">
 
         <!--The first row contains the header, navigation bar and background image -->
-
-
-
         <div class="row">
             <div class="large-12 columns imagebg">
                 <div class="row">
@@ -49,36 +46,25 @@
                                     </a>
                                 </li>
 
-
                             </ul>
-
                         </nav>
-
-
                     </div>
 
-
                     <div class="content-paper">
-                        <h1 class="content_paper_name">Hi, I'm <span></span>Ciku Mwangi</span>
+                        <h1 class="content_paper_name">Hi, I'm <span></span>Ciku Mwangi</span> </h1>
 
-  </h1>
-                        <p class="content_paper_info"> A sofware Developer. Just wonna make cool websites
+                        <p class="content_paper_info"> A sofware Developer. Just wonna make cool websites </p>
 
-                        </p>
                     </div>
                     <!--End Header-->
                     <!--
-<div class="caption-overlay">
-                            <h1 class="caption_overlay_title">Hi, I'm <span></span>Ciku Mwangi</span>
-  </h1> <p class="caption_overlay_content"> A sofware Developer. Just wonna make cool websites
- </p>
-                        </div>
+
 -->
 
                 </div>
             </div>
         </div>
-    </div>
+
     <!--The second row -->
     <div class="row second">
 
@@ -135,26 +121,28 @@
 
         <div class="large-4 columns ">
 
-            <div class="img1">
+            <div class="immager">
                 <a href="http://frontendsiteb.bitballoon.com/">
-                <img src="img/FrontEndWebpng"/>
+                    <img src="img/FrontEndWebpng" />
 
-            <!--Overlay text on image hover-->
-            <span class="transition-overlay">
-                    <h2>Front End<br> Development</h2>
-                </span></a></div>
+                    <!--Overlay text on image hover-->
+                    <span class="transition-overlay">
+                    Front End<br> Development
+                </span>
+                </a>
+            </div>
             <!--Overlay text on image hover-->
 
         </div>
         <div class="large-4 columns ">
 
-            <div class="imag2">
+            <div class="immager">
 
                 <a href="http://gameofthrones.bitballoon.com/">
                     <img src="img/game%20of%20thrones.png" alt="" />
 
-                <span class="transition-overlay">
-                    <h2>Game of Thrones</h2>
+                    <span class="transition-overlay">
+                    Game of <br>Thrones
                 </span>
                 </a>
             </div>
@@ -165,55 +153,55 @@
 
         </div>
         <div class="large-4 columns ">
-            <div class="imag3">
-            <a href="http://queens-hotel.bitballoon.com/">
-            <img src="img/queens.png"/>
-            <!--Overlay text on image hover-->
-            <span class="transition-overlay">
-                    <h2> Queens Hotel</h2>
+            <div class="immager">
+                <a href="http://queens-hotel.bitballoon.com/">
+                    <img src="img/queens.png" />
+                    <!--Overlay text on image hover-->
+                    <span class="transition-overlay">
+                     Queens Hotel
                 </span>
-            <!--Overlay text on image hover-->
+                    <!--Overlay text on image hover-->
                 </a>
+            </div>
+        </div></div>
+
+        <div class="row four">
+            <div class="large-12 columns">
+                <h2 class="blogger">Blog</h2>
+                <h4 class="blog header"> How to create a Drop Down Navigation Menu </h4>
+                <p class="blog cont"> Lorem ipsum dolor sit amet, legere dicunt et pro. Nullam denique maluisset ad has. Eam atomorum complectitur ea, vim ut
+                    <br> ornatus singulis. Tibique salutandi similique nec at, vim te iriure honestatis omittantur, nam vide scripta euismod at. </p>
+                <button class="alert hollow button" href="#">Read More</button>
+
+            </div>
+
         </div>
-    </div>
 
-    <div class="row four">
-        <div class="large-12 columns">
-            <h2 class="blogger">Blog</h2>
-            <h4 class="blog header"> How to create a Drop Down Navigation Menu </h4>
-            <p class="blog cont"> Lorem ipsum dolor sit amet, legere dicunt et pro. Nullam denique maluisset ad has. Eam atomorum complectitur ea, vim ut
-                <br> ornatus singulis. Tibique salutandi similique nec at, vim te iriure honestatis omittantur, nam vide scripta euismod at. </p>
-            <button class="alert hollow button" href="#">Read More</button>
-
+        <!--        row five contents-->
+        <div class="row five">
+            <div class="large-12 columns five_col">
+            </div>
         </div>
-
-    </div>
-
-    <!--        row five contents-->
-    <div class="row five">
-        <div class="large-12 columns five_col">
-        </div>
-    </div>
-<!--    My Contact form -->
+        <!--    My Contact form -->
         <div class="row form">
-        <div class="large-12 columns">
+            <div class="large-12 columns">
 
+            </div>
+
+        </div>
+        <!--    My Contact form -->
+
+        <!--        Foooter with contacts and copyright info -->
+        <div class="row footer">
+            <div class="large-6 columns">
+            </div>
+            <div class="large-6 columns">
+            </div>
         </div>
 
     </div>
-    <!--    My Contact form -->
 
-    <!--        Foooter with contacts and copyright info -->
-    <div class="row footer">
-        <div class="large-6 columns">
-        </div>
-        <div class="large-6 columns">
-        </div>
-    </div>
-
-    </div>
-
-
+</div>
     <script src="js/vendor/jquery.min.js"></script>
     <script src="js/vendor/what-input.min.js"></script>
     <script src="js/foundation.min.js"></script>
