--- a/index.html
+++ b/index.html
@@ -49,111 +49,142 @@
                             </ul>
                         </nav>
                     </div>
+                </div>
 
-                    <div class="content-paper">
-                        <h1 class="content_paper_name">Hi, I'm <span></span>Ciku Mwangi</span> </h1>
+                <div class="content-paper">
+                    <h1 class="content_paper_name">Hi, I'm <span></span>Ciku Mwangi</span> </h1>
 
-                        <p class="content_paper_info"> A sofware Developer. Just wonna make cool websites </p>
+                    <p class="content_paper_info"> A sofware Developer. Just wonna make cool websites </p>
 
-                    </div>
-                    <!--End Header-->
-                    <!--
+                </div>
+                <!--End Header-->
+                <!--
 
 -->
 
-                </div>
             </div>
         </div>
+    </div>
 
-        <!--The second row -->
-        <div class="row second">
+    <!--The second row -->
+    <div class="row second">
 
-            <!-- row 2 first column
+        <!-- row 2 first column
             with profile picture-->
 
-            <div class="large-4 columns aside">
-                <div class="row aside1">Prof pic</div>
-                <div class="row aside2">
-                    <h5 class="col name"> Ciku Mwangi
+        <div class="large-4 columns aside">
+            <div class="row aside1">Prof pic</div>
+            <div class="row aside2">
+                <h5 class="col name"> Ciku Mwangi
                  </h5></div>
 
-                <div class="row aside3">
-                    <p class="follow">Follow me on:</p>
-                    <ul class="nav_social">
-                        <li><a href="#"><i class="fa fa-facebook-square fa-2x" > </i></a></li>
-                        <li>
-                            <a href="#"> <i class="fa fa-twitter-square fa-2x"></i></a>
-                        </li>
-                        <li><a href="#"><i class="fa fa-google-plus-square fa-2x"></i></li>
+            <div class="row aside3">
+                <p class="follow">Follow me on:</p>
+                <ul class="nav_social">
+                    <li><a href="#"><i class="fa fa-facebook-square fa-2x" > </i></a></li>
+                    <li>
+                        <a href="#"> <i class="fa fa-twitter-square fa-2x"></i></a>
+                    </li>
+                    <li><a href="#"><i class="fa fa-google-plus-square fa-2x"></i></li>
                         <li> <a href="#"><i class="fa fa-pinterest-square fa-2x"></i></a></li>
-                    </ul>
-                </div>
-            </div>
-
-            <!--          End of  row 2 first column with profile picture-->
-            <div class="large-1 columns">
-
-            </div>
-            <div class="large-6 columns col2">
-                <h4 class="col about">About Me</h4>
-                <p class="col text"> I am a software developer who is passionate about coding and creating new stuff that relate to technology. My hobbies are
-                    <br>watching movies, cooking, community development and </p>
-                <h5 class="col skill">Skills</h5>
-
-                <p class="col text">
-                    <ul class="list">
-                        <li><a href="#">Html5       CSS3</a> </li>
-                        <li> <a href="#">Javascript</a></li>
-                        <li> <a href="#">Python</a></li>
-                        <li><a href="#"> SQL</a> </li>
-                    </ul>
-                </p>
-
-
-            </div>
-            <div class="large-1 columns">
-                <br>
+                </ul>
             </div>
         </div>
 
-        <div class="row three">
-            <div class="port">Portfolio</div>
+        <!--          End of  row 2 first column with profile picture-->
+        <div class="large-1 columns">
+
+        </div>
+        <div class="large-6 columns col2">
+            <h4 class="col about">About Me</h4>
+            <p class="col text"> I am a software developer who is passionate about coding and creating new stuff that relate to technology. I hold a Bachelors Degree in
+                <br>Mathematics and Computer Science </p>
+            <h5 class="col skill">Skills</h5>
+
+<!--
+          <p class="col text">
+    <ul class="list">
+        <li><a href="#">Html5       CSS3</a> </li>
+        <li> <a href="#">Javascript</a></li>
+        <li> <a href="#">Python</a></li>
+        <li><a href="#"> SQL</a> </li>
+    </ul>
+</p>
+-->
+
+
+        </div>
+        <div class="large-1 columns">
+            <br>
+        </div>
+    </div>
+
+    <div class=" row port">Portfolio</div>
+    <!--row three-->
+    <div class="row three small-up-1 medium-up-2 large-up-4">
+
+        <div class="column">
+            <img src="img/FrontEndWebpng" class="thumbnail" alt="">
+        </div>
+        <div class="column">
+            <img src="img/game%20of%20thrones.png" class="thumbnail" alt="">
+        </div>
+        <div class="column">
+            <img src="img/queens.png" class="thumbnail" alt="">
+        </div>
+        <div class="column">
+            <img src="img/FrontEndWebpng" class="thumbnail" alt="">
+        </div>
+        <div class="column">
+            <img src="img/queens.png" class="thumbnail" alt="">
+        </div>
+        <div class="column">
+            <img src="img/game%20of%20thrones.png" class="thumbnail" alt="">
+        </div>
+        <div class="column">
+            <img src="img/FrontEndWebpng" class="thumbnail" alt="">
+        </div>
+        <div class="column">
+            <img src="img/game%20of%20thrones.png" class="thumbnail" alt="">
+        </div>
+    </div>
+
+
+    <!--row three-->
+
+    <div class="row four">
+        <div class="large-12 columns">
+            <h2 class="blogger">Blog</h2>
+            <h4 class="blog header"> How to create a Drop Down Navigation Menu </h4>
+            <p class="blog cont"> Lorem ipsum dolor sit amet, legere dicunt et pro. Nullam denique maluisset ad has. Eam atomorum complectitur ea, vim ut
+                <br> ornatus singulis. Tibique salutandi similique nec at, vim te iriure honestatis omittantur, nam vide scripta euismod at. </p>
+            <button class="alert hollow button" href="#">Read More</button>
 
         </div>
 
-        <div class="row four">
-            <div class="large-12 columns">
-                <h2 class="blogger">Blog</h2>
-                <h4 class="blog header"> How to create a Drop Down Navigation Menu </h4>
-                <p class="blog cont"> Lorem ipsum dolor sit amet, legere dicunt et pro. Nullam denique maluisset ad has. Eam atomorum complectitur ea, vim ut
-                    <br> ornatus singulis. Tibique salutandi similique nec at, vim te iriure honestatis omittantur, nam vide scripta euismod at. </p>
-                <button class="alert hollow button" href="#">Read More</button>
+    </div>
 
-            </div>
+    <!--        row five contents-->
+    <div class="row five">
+        <div class="large-12 columns five_col">
+        </div>
+    </div>
+    <!--    My Contact form -->
+    <div class="row form">
+        <div class="large-12 columns">
 
         </div>
 
-        <!--        row five contents-->
-        <div class="row five">
-            <div class="large-12 columns five_col">
-            </div>
-        </div>
-        <!--    My Contact form -->
-        <div class="row form">
-            <div class="large-12 columns">
+    </div>
+    <!--    My Contact form -->
 
-            </div>
-
+    <!--        Foooter with contacts and copyright info -->
+    <div class="row footer">
+        <div class="large-6 columns">
         </div>
-        <!--    My Contact form -->
-
-        <!--        Foooter with contacts and copyright info -->
-        <div class="row footer">
-            <div class="large-6 columns">
-            </div>
-            <div class="large-6 columns">
-            </div>
+        <div class="large-6 columns">
         </div>
+    </div>
 
     </div>
 
