--- a/index.html
+++ b/index.html
@@ -165,16 +165,17 @@
 
         <!--        row five contents-->
         <div class="row five">
-            <div class="large-12 columns five_col">
+            <div class="large-4 columns">
 
             </div>
+
         </div>
         <!--    My Contact form -->
         <div class="row form">
             <div class="large-12 columns">
 
-            </div>
 
+            </div>
         </div>
         <!--    My Contact form -->
 
