added icons in skills

--- a/index.html
+++ b/index.html
@@ -121,28 +121,28 @@
         <!--row three-->
         <div class="row three small-up-1 medium-up-2 large-up-4">
 
-            <div class="column">
+            <div class="column borderim">
                 <img src="img/FrontEndWebpng" class="thumbnail" alt="">
             </div>
-            <div class="column">
+            <div class="column borderim">
                 <img src="img/game%20of%20thrones.png" class="thumbnail" alt="">
             </div>
-            <div class="column">
+            <div class="column borderim">
                 <img src="img/queens.png" class="thumbnail" alt="">
             </div>
-            <div class="column">
+            <div class="column borderim">
                 <img src="img/FrontEndWebpng" class="thumbnail" alt="">
             </div>
-            <div class="column">
+            <div class="column borderim">
                 <img src="img/queens.png" class="thumbnail" alt="">
             </div>
-            <div class="column">
+            <div class="column borderim">
                 <img src="img/game%20of%20thrones.png" class="thumbnail" alt="">
             </div>
-            <div class="column">
+            <div class="column borderim">
                 <img src="img/FrontEndWebpng" class="thumbnail" alt="">
             </div>
-            <div class="column">
+            <div class="column borderim">
                 <img src="img/game%20of%20thrones.png" class="thumbnail" alt="">
             </div>
         </div>
@@ -155,8 +155,8 @@
                 <div class="border2">
                     <h2 class="blogger">Blog</h2>
                     <h4 class="blog header"> How to create a Drop Down Navigation Menu </h4>
-                    <p class="blog cont"> Lorem ipsum dolor sit amet, legere dicunt et pro. Nullam denique maluisset ad has. Eam atomorum complectitur ea, vim ut
-                        <br> ornatus singulis. Tibique salutandi similique nec at, vim te iriure honestatis omittantur, nam vide scripta euismod at. </p>
+                    <p class="blog cont"> This post covers the step by step process of creating a drop down navigation bar.
+                        <br> This was my fisrt drop-down which took like 2hrs to make.(LOL..I know. ) </p>
                     <button class="alert hollow button" href="#">Read More</button>
                 </div>
             </div>
@@ -165,15 +165,54 @@
 
         <!--        row five contents-->
         <div class="row five">
-            <div class="large-4 columns">
+            <div class="large-3 columns skillsetter">
+                <h3>Html5</h3>
 
+                <img class="iconic" src="img/1460676594_badge-html-5.svg" alt="" />
+
+                <p class="inform">Web Development</p>
             </div>
+            <div class="large-3 columns skillsetter">
+                <h3>Css3</h3>
+
+                <img class="iconic" src="img/1460676625_badge-css-3.svg" alt="" />
+
+                <p class="inform">Web Development
+                    <br> CSS3 Animations</p>
+            </div>
+            <div class="large-3 columns skillsetter">
+                <h3>Javascript</h3>
+
+                <img class="iconic" src="img/1460676536_node_js.svg" alt="" />
+
+                <p class="inform"></p>
+            </div>
+            <div class="large-3 columns skillsetter">
+                <h3>Photoshop</h3>
+                <img class="iconic" src="img/Adobe%20Photoshop-48.png" alt="" />
+                <p class="inform"> Creative Designs
+                    <br>Logo Designs </p>
+            </div>
+
 
         </div>
         <!--    My Contact form -->
-        <div class="row form">
+        <div class="row formcont">
             <div class="large-12 columns">
+                <h2>Contact Me</h2>
 
+                <form action="">
+                    <input type="text" id="n" autofocus>
+                    <label for="n" class="name"><span class="label-text">Name</span></label>
+
+                    <input type="email" id="e">
+                    <label for="e" class="email"><span class="label-text">Email</span></label>
+
+                    <textarea id="m"></textarea>
+                    <label for="m" class="message"><span class="label-text">Message</span></label>
+
+                    <input type="submit" value="Send message" class="button">
+                </form>
 
             </div>
         </div>
