--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                             <ul class="mcd-menu">
 
                                 <li>
-                                    <a href="#"> <i class="fa fa-home"></i>
+                                    <a href="index.html"> <i class="fa fa-home"></i>
                                         <strong>Home</strong>
                                     </a>
                                 </li>
@@ -41,7 +41,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#"> <i class="fa fa-comments-o"></i>
+                                    <a href="blog.html"> <i class="fa fa-comments-o"></i>
                                         <strong>Blog</strong>
                                     </a>
                                 </li>
@@ -54,7 +54,8 @@
                 <div class="content-paper">
                     <h1 class="content_paper_name">Hi, I'm <span></span>Ciku Mwangi</span> </h1>
 
-                    <p class="content_paper_info"> A sofware Developer. Just wonna make cool websites </p>
+                    <p class="content_paper_info"> A sofware Developer. Just wonna
+                        <br> make cool websites </p>
 
                 </div>
                 <!--End Header-->
@@ -99,18 +100,7 @@
                 <h4 class="col about">About Me</h4>
                 <p class="col text"> I am a software developer who is passionate about coding and creating new stuff that relate to technology. I hold a Bachelors Degree in
                     <br>Mathematics and Computer Science </p>
-                <!--            <h5 class="col skill">Skills</h5>-->
 
-                <!--
-          <p class="col text">
-    <ul class="list">
-        <li><a href="#">Html5       CSS3</a> </li>
-        <li> <a href="#">Javascript</a></li>
-        <li> <a href="#">Python</a></li>
-        <li><a href="#"> SQL</a> </li>
-    </ul>
-</p>
--->
             </div>
             <div class="large-1 columns">
                 <br>
@@ -198,7 +188,10 @@
         </div>
         <!--    My Contact form -->
         <div class="row formcont">
-            <div class="large-12 columns">
+            <div class="large-3 columns">
+                <br>
+            </div>
+            <div class="large-6 columns formset">
                 <h2>Contact Me</h2>
 
                 <form action="">
@@ -213,7 +206,10 @@
 
                     <input type="submit" value="Send message" class="button">
                 </form>
+            </div>
 
+            <div class="large-3 columns">
+                <br>
             </div>
         </div>
         <!--    My Contact form -->
