--- a/blog.html
+++ b/blog.html
@@ -27,7 +27,7 @@
                     <ul class="mcd-menu">
 
                         <li>
-                            <a href="#"> <i class="fa fa-home"></i>
+                            <a href="index.html"> <i class="fa fa-home"></i>
                                 <strong>Home</strong>
                             </a>
                         </li>
@@ -42,7 +42,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#"> <i class="fa fa-comments-o"></i>
+                            <a href="blog.html"> <i class="fa fa-comments-o"></i>
                                 <strong>Blog</strong>
                             </a>
                         </li>
