added avatar prof pic and social media icons

--- a/blog.html
+++ b/blog.html
@@ -91,8 +91,15 @@
             </div>
             <div class="large-9 columns">
                 Getting to know how to do a new stuff is quit amazing and rewarding as well. Since i started making websites using HTML5 and CSS3, i have learnt how dynamic they are and one will keep on learning new ideas. So, one of my major hacks was to create a drop down menu so that i could use it in my one page Game of Thrones cover. In this tutorial, i will explain how i created the navigation using HTML ,CCS.
-                <h6>The HTML Markup</h6>
-                <img src="">
+
+                <h6 class="markup">The HTML Markup</h6>
+
+                <div class="row htm">
+
+
+                    <!--contents in blog post-->
+                </div>
+
 
             </div>
 
