--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#"> <i class="fa fa-edit"></i>
+                                    <a href="#sec"> <i class="fa fa-edit"></i>
                                         <strong>About me</strong>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#"> <i class="fa fa-picture-o"></i>
+                                    <a href="#foto"> <i class="fa fa-picture-o"></i>
                                         <strong>Portfolio</strong>
                                     </a>
                                 </li>
@@ -68,16 +68,17 @@
 
 
         <!--The second row -->
-        <div class="row second">
+        <div class="row second" id="sec">
 
             <!-- row 2 first column
             with profile picture-->
 
             <div class="large-4 columns aside">
-                <div class="row aside1">Prof pic</div>
+                <div class="row aside1"><img id="avatar" src="img/avatar.jpeg" /> </div>
                 <div class="row aside2">
-                    <h5 class="col name"> Ciku Mwangi
-                 </h5></div>
+                    <h5 class="col name">
+                 </h5>
+                </div>
 
                 <div class="row aside3">
                     <p class="follow">Follow me on:</p>
@@ -107,7 +108,7 @@
             </div>
         </div>
 
-        <div class=" row port">Portfolio</div>
+        <div class="row port" id="foto">Portfolio</div>
         <!--row three-->
         <div class="row three small-up-1 medium-up-2 large-up-4">
 
@@ -146,7 +147,7 @@
                     <h2 class="blogger">Blog</h2>
                     <h4 class="blog header"> How to create a Drop Down Navigation Menu </h4>
                     <p class="blog cont"> This post covers the step by step process of creating a drop down navigation bar.
-                        <br> This was my fisrt drop-down which took like 2hrs to make.(LOL..I know. ) </p>
+                        <br> So, one of my major hacks was to create a drop down menu so that i could use it in my one page Game of Thrones cover. In this tutorial, i will explain how i created the navigation using HTML CCS. </p>
                     <button class="alert hollow button" href="#">Read More</button>
                 </div>
             </div>
