--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
         <!--        Foooter with contacts and copyright info -->
         <div class="row footer">
             <div class="large-6 columns">
-                <p class="copy">Copyright @ 2016</p>
+                <p class="copy"></p>
 
             </div>
             <div class="large-6 columns">
