added images and links to portfolio

--- a/blog.html
+++ b/blog.html
@@ -104,7 +104,14 @@
             </div>
 
         </div>
+        <div class="row footer">
+            <div class="large-6 columns">
+                <p class="copy"></p>
 
+            </div>
+            <div class="large-6 columns">
+            </div>
+        </div>
     </div>
 
 
