--- a/index.html
+++ b/index.html
@@ -121,14 +121,14 @@
             <div class="column borderim">
                 <img src="img/queens.png" class="thumbnail" alt="">
             </div>
-            <div class="column borderim">
-                <img src="img/FrontEndWebpng" class="thumbnail" alt="">
+            <div class="column borderim"><a href="http://studio-360-designs.bitballoon.com/">
+                <img src="img/designx.png"  class="thumbnail" alt=""></a>
             </div>
-            <div class="column borderim">
-                <img src="img/queens.png" class="thumbnail" alt="">
+            <div class="column borderim"><a href="http://quoraloginpage.bitballoon.com/">
+              <img src="img/quora%20.png" class="thumbnail" alt=""></a>
             </div>
-            <div class="column borderim">
-                <img src="img/game%20of%20thrones.png" class="thumbnail" alt="">
+            <div class="column borderim"><a href="http://frontendexercises.bitballoon.com/">
+                <img src="img/ffrpng" class="thumbnail" alt=""></a>
             </div>
             <div class="column borderim">
                 <img src="img/FrontEndWebpng" class="thumbnail" alt="">
@@ -176,7 +176,7 @@
 
                 <img class="iconic" src="img/1460676536_node_js.svg" alt="" />
 
-                <p class="inform"></p>
+                <p class="inform">Functionality</p>
             </div>
             <div class="large-3 columns skillsetter">
                 <h3>Photoshop</h3>
