added links to portfolio

--- a/index.html
+++ b/index.html
@@ -121,14 +121,17 @@
             <div class="column borderim">
                 <img src="img/queens.png" class="thumbnail" alt="">
             </div>
-            <div class="column borderim"><a href="http://studio-360-designs.bitballoon.com/">
-                <img src="img/designx.png"  class="thumbnail" alt=""></a>
+            <div class="column borderim">
+                <a href="http://studio-360-designs.bitballoon.com/">
+                    <img src="img/designx.png" class="thumbnail" alt=""></a>
             </div>
-            <div class="column borderim"><a href="http://quoraloginpage.bitballoon.com/">
-              <img src="img/quora%20.png" class="thumbnail" alt=""></a>
+            <div class="column borderim">
+                <a href="http://quoraloginpage.bitballoon.com/">
+                    <img src="img/quora%20.png" class="thumbnail" alt=""></a>
             </div>
-            <div class="column borderim"><a href="http://frontendexercises.bitballoon.com/">
-                <img src="img/ffrpng" class="thumbnail" alt=""></a>
+            <div class="column borderim">
+                <a href="http://frontendexercises.bitballoon.com/">
+                    <img src="img/ffrpng" class="thumbnail" alt=""></a>
             </div>
             <div class="column borderim">
                 <img src="img/FrontEndWebpng" class="thumbnail" alt="">
