added a sticky navigation bar

--- a/index.html
+++ b/index.html
@@ -14,9 +14,24 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="row">
+        <div class="large-12 columns">
+            <div id="header" class="header">
+                <div id="nav">
+                    <ul>
+                        <li><a href="#top">Home</a></li>
+                        <li><a href="#about">About Me </a></li>
+                        <li><a href="#services">Portfolio</a></li>
+                        <li><a href="#blog">Blog</a></li>
+                        <li><a href="#contact">Contact</a></li>
 
-        <!--The first row contains the header, navigation bar and background image -->
+                    </ul>
+                </div>
+            </div </div>
+        </div>
+
+
+        <!--The first row contains the header, navigation bar -->
         <div class="row">
 
 
